[2] Rename: file changes

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,64 @@ __pycache__/
 
 # Logs / misc
 *.log
+assignment3/src/heapmgr1.c
+assignment2/matcher3
+assignment2/matcher4
+assignment2/bin/dirtree
+assignment2/obj/dirtree.o
+assignment2/pat1/abc
+assignment2/pat1/axc
+assignment2/pat1/zxc
+assignment2/pat1/zzz
+assignment2/pat1/subdir1/aXc
+assignment2/pat2/abababc
+assignment2/pat2/ababc
+assignment2/pat2/abc
+assignment2/pat2/abxy
+assignment2/pat2/c
+assignment2/pat2/xababcx
+assignment2/pat2/outer/inner/ababc
+assignment2/pat3/abxdbydef
+assignment2/pat3/abxdef
+assignment2/pat3/aef
+assignment2/pat3/alpha
+assignment2/pat3/ef
+assignment2/pat3/g
+assignment2/pat3/A/hold/aef
+assignment2/pat3/A/hold/ef
+assignment2/pat3/B/none/here
+assignment2/matcher
+assignment2/test1/four
+assignment2/test1/five
+assignment2/test1/one
+assignment2/test1/three
+assignment2/test1/two
+assignment2/test1/a/b/f
+assignment2/test1/dir1/bothfilenameand.extensionarelong
+assignment2/test1/dir2/nine
+assignment2/test1/dir2/seven
+assignment2/test1/dir2/six
+assignment2/test1/a/b/c/d/e/f
+assignment2/test1/dir2/eight
+assignment2/test1/dir2/ten
+assignment2/test1/dir3/eight
+assignment2/test1/dir3/seven
+assignment2/test1/dir3/ten
+assignment2/test1/dir3/nine
+assignment2/test1/dir3/six
+assignment2/test2/five
+assignment2/test2/four
+assignment2/test2/one
+assignment2/test2/seven
+assignment2/test2/six
+assignment2/test2/three
+assignment2/test2/two
+assignment2/test2/subdir1/target
+assignment2/test2/subdir2/link
+assignment2/test3/five
+assignment2/test3/one
+assignment2/test3/four
+assignment2/test3/three
+assignment2/test3/two
+assignment2/test3/subdir1/root
+assignment2/test3/subdir1/link
