[3] Feat: final changes

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ assignment2/test3/three
 assignment2/test3/two
 assignment2/test3/subdir1/root
 assignment2/test3/subdir1/link
+assignment3/src/202110421_assign3.tar.gz
